# llm-debate

./: .env.example  .gitignore  AGENTS.md  README.md  debate_types.py  decisions.md  requirements.txt  rl_basic.py  viz.py
artifacts/drive_snapshot_20260210/: README.md  drive_tinker_logs_20260120_231826_summary_s8.tgz  drive_tinker_logs_20260120_233615_debate_s3_strict.tgz
docs/: CODE_REVIEW.md  DEBATE_SPEC.md  GPU_VALIDATION_RUNBOOK.md  IMPLEMENTATION_NOTES.md  LOCAL_TINKER_RUNBOOK.md  code_interfaces_diagram.html  drive_snapshot_vs_local_worktree.md  logging.md
docs/archive/: drive_snapshot_decisions_20260210.md  (+1 more)
scripts/: api_debug.py  check_local_sampling_logprobs.py  compare_api_paths.py  debug_prompt_parity.py  download_hf_model.py  eval_base_vs_finetuned.py  eval_secret_word_sft.py  generate_secret_word_sft.py  gh200_setup_local_tinker.sh  grpo_color_canary.py  plot_group_variance.py  plot_reward_per_step.py  preview_secret_word_sft.py  probe_first_token_logprobs.py  score_coin_next_token.py  search_coin_prompt_balance.py  sft_perplexity_smoke.py  sft_secret_word.py  smoke_test.py  summary_group_variance.py  test_debate.py  train.py  triage_env.py  validate_rollout_logs.py  view_logs.py
tinker-local/: AGENTS.md  README.md  pyproject.toml
tinker-local/src/tinker/: __init__.py  _async.py  _transformers_backend.py  _vllm_backend.py  _vllm_process.py  local_config.py  model_input.py  sampling_client.py  service_client.py  training_client.py  types.py  vllm_sampling_client.py  vllm_worker.py
tinker-local/src/tinker_local_examples/: minimal_smoke.py
(+62 files in other folders)
