[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinker-local"
version = "0.1.0"
description = "Local subset of the Tinker SDK backed by (Unsloth/)Transformers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers>=4.38",
  "peft>=0.10",
  "accelerate>=0.27",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

